--- a/dev/scss/helpers/_variables.scss
+++ b/dev/scss/helpers/_variables.scss
@@ -18,6 +18,7 @@ $screen-xl-min: 1200px;
 // Colors
 $white: #fff;
 $black: #000;
-$green:#008000;
-$blue: #167cd0;
-$yellow: #ffff00;
+$pink: #FFCBCB;
+$yellow: #FFFADD;
+$blue: #0E0D4E;
+
